✨ New Awesome Development Session

--- a/views/pages/index.twig
+++ b/views/pages/index.twig
@@ -5,6 +5,7 @@
 #}
 {% extends "layouts.master" %}
 {% block content %}
+<h1>TEST</h1>
     {% component home %}
 {% endblock %}
 {% block scripts %}
